--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "prop-types": "^15.8.1",
-    "query-string": "^8.1.0",
+    "query-string": "7.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "6"
